# Fahad-faliz-coder

./: README.md  pyproject.toml  requirements.txt
faliz_coder/: __init__.py  blueprint.py  cli.py  orchestrator.py  providers.py
faliz_coder/agents/: coder.py  critic.py  debugger.py  planner.py  swarm.py
faliz_coder/core/: workspace.py
